# mouth-high

./: .gitignore  README.md  index.html  package-lock.json  package.json  recording-bar.html  vite.config.ts
src/: App.tsx  main.tsx  recording-bar-main.tsx  recording-bar.css  styles.css
src-python/: asr_service.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  focus.rs  hotkey.rs  input.rs  lib.rs  main.rs  sidecar.rs  tray.rs
src/components/: History.tsx  HotkeyRecorder.tsx  RecordingBar.tsx  RecordingBarWindow.tsx  Settings.tsx  SettingsPage.tsx  Status.tsx
src/hooks/: useTauri.ts
