[package]
name = "mouth-high"
version = "1.0.0"
description = "macOS voice input tool using Qwen3-ASR"
authors = ["you"]
edition = "2021"

[lib]
name = "mouth_high_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
enigo = { version = "0.2", features = ["serde"] }
arboard = "3"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
dirs = "5"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.release]
strip = true
lto = true
